--- a/Documentos/Idea/.md
+++ b/Documentos/Idea/.md
@@ -1,3 +1,9 @@
 #  GAME NEWS
 
-Consiste en desarrolar una app en la cual se permite a los usuarios interesados en los videojuegos estár al tanto de laS noticias y novedades en cuanto a lanzamientos de videojuegos cada año, a traves de trailers y fechas las cuales se pueden visualuzar a traves de un calendario  
+Consiste en desarrollar una app en la cual se permite a los usuarios interesados en los videojuegos estár al tanto de laS noticias y novedades en cuanto a lanzamientos de videojuegos cada año, a traves de trailers y fechas las cuales se pueden visualuzar a traves de un calendario.
+
+###### APPS SIMILARES
+
+- TO PLAY 
+- GameScope
+- Ts News
